[tool.poetry]
name = "cocapi"
version = "0.1.0"
description = "Fast Clash of Clans API wrapper without headache"
authors = ["bim-ba <znatnov.sava@yandex.ru>"]
license = "No License"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
dacite = "^1.6.0"
pyhumps = "^3.5.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
