[tool.poetry]
name = "cocapi"
version = "0.1.0"
description = "Fast Clash of Clans API wrapper without headache"
authors = ["bim-ba <znatnov.sava@yandex.ru>"]
license = "No License"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.1.0"
pytest-asyncio = "^0.18.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
token = "" # FIXME: to pass tests, paste your API token here
